JEDIT VERSION HISTORY

* Version 2.2pre9

+ Bug Fixes

- Fixed minor bug with the DIRTY_CHANGED event (since 2.2pre?)
- The new buffer loading code relied on Swing internals too much.
  So for the sake of future compatibility, the old 2.2pre6 code
  is now used
- Files were not retokenized when reloaded, this could cause minor
  problems with syntax highlighting (since 2.2pre7)
- The wait cursor wasn't hidden after a find-next operation if
  no matches were found (since 2.2pre7)
- view.style.operator property was missing, this caused NPEs sometimes
  (since 2.2pre8)
- Fixed compile error with some javac's in SyntaxDocument.java and
  EditAction.java (since 2.2pre7)

* Version 2.2pre8

+ Enhancements

- Buffers are only loaded when necessary. This improves jEdit's
  perceived speed when opening lots of files, etc
- Possible workaround for buggy focus handling
- An even better 'New View' icon (George Latkiewicz)

+ Bug Fixes

- Fixed minor bug in style option pane (since 1.7pre4)
- Perl mode had problems with << EOF statements (Andre Kaplan) (since 1.7pre3)
- Action loading code should now work if jEdit was loaded with a non-system
  class loader(since 2.2pre7)
- Reload command didn't work (Mike Dillon) (since 2.2pre7)
- jEdit now ignores empty command line parameters - so the windows batch
  file should work properly now (since 2.2pre7)
- Buffer.java and EditAction.java didn't compile with javac (since 2.2pre7)
- Fixed ridiculously huge tabs when using proportional-width fonts
  (since 1.7pre5)

+ API Changes

- Buffer.reload(View) is now Buffer.load(View) because it is used for initally
  loading the buffer as well

* Version 2.2pre7

+ New Features

- Scroll bar position is now saved while switching buffers
- You can now sort by label or shortcut in the key binding editor
- Updated expand-abbrev (Valery Kondakoff)
- C+HOME/C+END go to beginning and end of document
- New BufferUpdate.LOADING message fired on buffer load and reload