@@ -2,12 +2,17 @@ JEDIT VERSION HISTORY
 
 * Version 2.2pre9
 
++ Enhancements
+
+- Pressing Escape in the QuickSearch text field now moves the focus
+  back to the text area
+
 + Bug Fixes
 
-- Fixed minor bug with the DIRTY_CHANGED event (since 2.2pre?)
 - The new buffer loading code relied on Swing internals too much.
   So for the sake of future compatibility, the old 2.2pre6 code
   is now used
+- Fixed minor bug with the DIRTY_CHANGED event (since 2.2pre?)
 - Files were not retokenized when reloaded, this could cause minor
   problems with syntax highlighting (since 2.2pre7)
 - The wait cursor wasn't hidden after a find-next operation if
@@ -16,6 +21,10 @@ JEDIT VERSION HISTORY
   (since 2.2pre8)
 - Fixed compile error with some javac's in SyntaxDocument.java and
   EditAction.java (since 2.2pre7)
+- Unnecessary BufferUpdate.MODE_CHANGED messages are no longer sent
+  (since ???)
+- Fixed bug where invalid lines were sometimes drawn in the wrong color
+  as a result of plugin highlighters
 
 * Version 2.2pre8
 
